# simple-tbg

./: .gitignore  CMakeLists.txt  main.cpp
include/: battle_state.h  debug_overlay.h  entity.h  game_manager.h  game_state.h  menu_state.h  skill.h  skill_effect.h  state_manager.h  status_effect.h  team.h  turn_manager.h
src/: debug_overlay.cpp  entity.cpp  main.cpp  team.cpp  turn_manager.cpp
src/entity/: entity.cpp
src/game/: game_manager.cpp  team.cpp  turn_manager.cpp
src/skills/: skill.cpp  skill_effect.cpp  status_effect.cpp
src/states/: battle_state.cpp  menu_state.cpp  state_manager.cpp
